# grpc-rb-py

./: README.md
python-server/: README.md  pyproject.toml
python-server/protos/: helloworld.proto
python-server/python_server/: helloworld_pb2.py  main.py
python-server/tests/: test_python_server.py
ruby-client/: Gemfile  README.md
ruby-client/app/: main.rb
ruby-client/app/lib/: helloworld_pb.rb  helloworld_services_pb.rb
