[tool.poetry]
name = "python-server"
version = "0.1.0"
description = ""
authors = ["23prime <23.prime.37@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
grpcio = "^1.46.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.960"
isort = "^5.10.1"
flake8 = "^4.0.1"
grpcio-tools = "^1.46.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
